set psl-master to version 1.42 used by bookworm

--- a/conf/initramfs.conf
+++ b/conf/initramfs.conf
@@ -20,12 +20,14 @@
 MODULES=most
 
 #
-# BUSYBOX: [ y | n ]
+# BUSYBOX: [ y | n | auto ]
 #
-# Use busybox if available.
+# Use busybox shell and utilities.  If set to n, klibc utilities will be used.
+# If set to auto (or unset), busybox will be used if installed and klibc will
+# be used otherwise.
 #
 
-BUSYBOX=y
+BUSYBOX=auto
 
 #
 # KEYMAP: [ y | n ]
@@ -36,30 +38,29 @@ BUSYBOX=y
 KEYMAP=n
 
 #
-# COMPRESS: [ gzip | bzip2 | lzma | lzop ]
+# COMPRESS: [ gzip | bzip2 | lz4 | lzma | lzop | xz | zstd ]
 #
 
-COMPRESS=gzip
+COMPRESS=zstd
 
 #
-# NFS Section of the config.
+# COMPRESSLEVEL: ...
 #
-
+# Set a compression level for the compressor.
+# Defaults vary by compressor.
 #
-# BOOT: [ local | nfs ]
+# Valid values are:
+# 1 -  9 for gzip|bzip2|lzma|lzop
+# 0 -  9 for  lz4|xz
+# 0 - 19 for zstd
 #
-# local - Boot off of local media (harddrive, USB stick).
-#
-# nfs - Boot using an NFS drive as the root of the drive.
-#
-
-BOOT=local
+# COMPRESSLEVEL=3
 
 #
 # DEVICE: ...
 #
 # Specify a specific network interface, like eth0
-# Overridden by optional ip= bootarg
+# Overridden by optional ip= or BOOTIF= bootarg
 #
 
 DEVICE=
@@ -70,3 +71,20 @@ DEVICE=
 
 NFSROOT=auto
 
+#
+# RUNSIZE: ...
+#
+# The size of the /run tmpfs mount point, like 256M or 10%
+# Overridden by optional initramfs.runsize= bootarg
+#
+
+RUNSIZE=10%
+
+#
+# FSTYPE: ...
+#
+# The filesystem type(s) to support, or "auto" to use the current root
+# filesystem type
+#
+
+FSTYPE=auto
